apps/20-media/pyload/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: downloads
  labels:
    goldilocks.fairwinds.com/enabled: "true"
