apps/20-media/pyload/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pyload
  namespace: downloads
spec:
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: pyload
